Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -308,6 +308,60 @@
         </div>
     </section>
 
+    <!-- About Section -->
+    <section id="about" class="about-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 data-en="About UX90 Creations" data-es="Acerca de UX90 Creations">About UX90 Creations</h2>
+                <p data-en="We are a professional digital agency committed to transforming your ideas into exceptional digital experiences." data-es="Somos una agencia digital profesional comprometida a transformar tus ideas en experiencias digitales excepcionales.">
+                    We are a professional digital agency committed to transforming your ideas into exceptional digital experiences.
+                </p>
+            </div>
+
+            <div class="about-content">
+                <div class="about-text">
+                    <h3 data-en="Our Mission" data-es="Nuestra Misión">Our Mission</h3>
+                    <p data-en="To empower businesses with cutting-edge digital solutions that drive growth, enhance user experiences, and create lasting impact in the digital landscape." data-es="Empoderar a las empresas con soluciones digitales de vanguardia que impulsen el crecimiento, mejoren las experiencias de usuario y creen un impacto duradero en el panorama digital.">
+                        To empower businesses with cutting-edge digital solutions that drive growth, enhance user experiences, and create lasting impact in the digital landscape.
+                    </p>
+
+                    <h3 data-en="Our Vision" data-es="Nuestra Visión">Our Vision</h3>
+                    <p data-en="To be the leading digital agency recognized for innovation, quality, and exceptional client relationships, helping businesses thrive in the ever-evolving digital world." data-es="Ser la agencia digital líder reconocida por la innovación, calidad y relaciones excepcionales con los clientes, ayudando a las empresas a prosperar en el mundo digital en constante evolución.">
+                        To be the leading digital agency recognized for innovation, quality, and exceptional client relationships, helping businesses thrive in the ever-evolving digital world.
+                    </p>
+
+                    <h3 data-en="What Sets Us Apart" data-es="Lo Que Nos Distingue">What Sets Us Apart</h3>
+                    <ul class="about-features">
+                        <li data-en="Expert team with years of experience in digital solutions" data-es="Equipo experto con años de experiencia en soluciones digitales">Expert team with years of experience in digital solutions</li>
+                        <li data-en="Custom solutions tailored to your specific business needs" data-es="Soluciones personalizadas adaptadas a sus necesidades comerciales específicas">Custom solutions tailored to your specific business needs</li>
+                        <li data-en="Cutting-edge technologies and modern development practices" data-es="Tecnologías de vanguardia y prácticas de desarrollo modernas">Cutting-edge technologies and modern development practices</li>
+                        <li data-en="Comprehensive support from concept to deployment and beyond" data-es="Soporte integral desde el concepto hasta la implementación y más allá">Comprehensive support from concept to deployment and beyond</li>
+                        <li data-en="Proven track record of successful projects and satisfied clients" data-es="Historial comprobado de proyectos exitosos y clientes satisfechos">Proven track record of successful projects and satisfied clients</li>
+                    </ul>
+                </div>
+
+                <div class="about-stats">
+                    <div class="stat-item">
+                        <div class="stat-number">50+</div>
+                        <div class="stat-label" data-en="Projects Completed" data-es="Proyectos Completados">Projects Completed</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">100%</div>
+                        <div class="stat-label" data-en="Client Satisfaction" data-es="Satisfacción del Cliente">Client Satisfaction</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">5+</div>
+                        <div class="stat-label" data-en="Years Experience" data-es="Años de Experiencia">Years Experience</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">24/7</div>
+                        <div class="stat-label" data-en="Support Available" data-es="Soporte Disponible">Support Available</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
@@ -336,7 +390,7 @@
                         <div>
                             <h3 data-en="Phone" data-es="Teléfono">Phone</h3>
                             <p>
-                                <a href="tel:+15551234567">+1 (555) 123-4567</a>
+                                <a href="tel:+17869926153">+1 (786) 992-6153</a>
                             </p>
                         </div>
                     </div>
@@ -346,7 +400,7 @@
                         <div>
                             <h3 data-en="Email" data-es="Correo">Email</h3>
                             <p>
-                                <a href="mailto:hello@ux90creations.com">hello@ux90creations.com</a>
+                                <a href="mailto:machindavid2@gmail.com">machindavid2@gmail.com</a>
                             </p>
                         </div>
                     </div>
@@ -394,7 +448,7 @@
                 <div class="whatsapp-cta">
                     <h3 data-en="Ready to start your project?" data-es="¿Listo para iniciar tu proyecto?">Ready to start your project?</h3>
                     <p data-en="Chat with us on WhatsApp for immediate assistance" data-es="Chatea con nosotros en WhatsApp para asistencia inmediata">Chat with us on WhatsApp for immediate assistance</p>
-                    <a href="https://wa.me/15551234567?text=Hello%20I%20want%20info%20about%20UX90%20Creations%20services" class="whatsapp-btn" target="_blank">
+                    <a href="https://wa.me/17869926153?text=Hello%20I%20want%20info%20about%20UX90%20Creations%20services" class="whatsapp-btn" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         <span data-en="Chat on WhatsApp" data-es="Chatear en WhatsApp">Chat on WhatsApp</span>
                     </a>
@@ -429,8 +483,8 @@
                 <div class="footer-section">
                     <h4 data-en="Contact" data-es="Contacto">Contact</h4>
                     <ul class="contact-details">
-                        <li><i class="fas fa-phone"></i> <a href="tel:+15551234567">+1 (555) 123-4567</a></li>
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:hello@ux90creations.com">hello@ux90creations.com</a></li>
+                        <li><i class="fas fa-phone"></i> <a href="tel:+17869926153">+1 (786) 992-6153</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:machindavid2@gmail.com">machindavid2@gmail.com</a></li>
                         <li><i class="fas fa-map-marker-alt"></i> <span data-en="Miami, FL, United States" data-es="Miami, FL, Estados Unidos">Miami, FL, United States</span></li>
                     </ul>
                 </div>
@@ -442,7 +496,7 @@
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/17869926153" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -457,7 +511,7 @@
     </footer>
 
     <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/15551234567?text=Hello%20I%20want%20info%20about%20UX90%20Creations%20services" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
+    <a href="https://wa.me/17869926153?text=Hello%20I%20want%20info%20about%20UX90%20Creations%20services" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
