Add UX90 Creations logo to website - Integrated logo in navbar, footer, favicon, and social media meta tags

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     <meta property="og:url" content="https://ux90creations.com/">
     <meta property="og:title" content="UX90 Creations - Professional Digital Agency">
     <meta property="og:description" content="Transform your digital presence with our expert web development, mobile apps, and SEO services.">
-    <meta property="og:image" content="https://ux90creations.com/og-image.jpg">
+    <meta property="og:image" content="https://ux90creations.com/images/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ux90creations.com/">
     <meta property="twitter:title" content="UX90 Creations - Professional Digital Agency">
     <meta property="twitter:description" content="Transform your digital presence with our expert web development, mobile apps, and SEO services.">
-    <meta property="twitter:image" content="https://ux90creations.com/og-image.jpg">
+    <meta property="twitter:image" content="https://ux90creations.com/images/logo.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="images/logo.png">
+    <link rel="apple-touch-icon" href="images/logo.png">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -39,8 +40,11 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <h2 class="brand-name" data-en="UX90 Creations" data-es="UX90 Creaciones">UX90 Creations</h2>
-                <span class="brand-tagline" data-en="Digital Agency" data-es="Agencia Digital">Digital Agency</span>
+                <img src="images/logo.png" alt="UX90 Creations Logo" class="brand-logo">
+                <div class="brand-text">
+                    <h2 class="brand-name" data-en="UX90 Creations" data-es="UX90 Creaciones">UX90 Creations</h2>
+                    <span class="brand-tagline" data-en="Digital Agency" data-es="Agencia Digital">Digital Agency</span>
+                </div>
             </div>
             
             <!-- Language Switcher -->
@@ -462,7 +466,10 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>UX90 Creations</h3>
+                    <div class="footer-brand">
+                        <img src="images/logo.png" alt="UX90 Creations Logo" class="footer-logo">
+                        <h3>UX90 Creations</h3>
+                    </div>
                     <p data-en="We are a team of web designers committed to our clients. UX90 Creations is the leading customer service agency since 2020. We create beautiful and functional websites, landing pages, marketplaces and custom solutions for our users." data-es="Somos un equipo de diseñadores web comprometidos con nuestros clientes. UX90 Creations es la agencia líder en servicio al cliente desde 2020. Creamos bellos y funcionales sitios web, landing pages, marketplaces y soluciones a la medida de nuestros usuarios.">
                         We are a team of web designers committed to our clients. UX90 Creations is the leading customer service agency since 2020. We create beautiful and functional websites, landing pages, marketplaces and custom solutions for our users.
                     </p>
