feat(seo): add Web Design Miami & SEO Miami landings + internal links and sitemap updates

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <li data-en="Responsive Design Miami" data-es="Design Responsivo Miami">Responsive Design Miami</li>
                             <li data-en="Google Positioning Integration" data-es="Integración Posicionamiento Google">Google Positioning Integration</li>
                         </ul>
-                        <a href="#contact" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                        <a href="services/web-design-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
                     </div>
                 </div>
 
@@ -284,7 +284,7 @@
                             <li data-en="SEO-Optimized Design Integration" data-es="Integración Design Optimizado SEO">SEO-Optimized Design Integration</li>
                             <li data-en="Google Business Optimization" data-es="Optimización Google Business">Google Business Optimization</li>
                         </ul>
-                        <a href="#contact" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                        <a href="services/seo-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
                     </div>
                 </div>
 
@@ -551,11 +551,11 @@
                 <div class="footer-section">
                     <h4 data-en="Services" data-es="Servicios">Services</h4>
                     <ul>
-                        <li><a href="#services" data-en="Web Development" data-es="Desarrollo Web">Web Development</a></li>
+                        <li><a href="services/web-design-miami.html" data-en="Web Design" data-es="Diseño Web">Web Design</a></li>
                         <li><a href="#services" data-en="Desktop Apps" data-es="Apps de Escritorio">Desktop Apps</a></li>
                         <li><a href="#services" data-en="Mobile Apps" data-es="Apps Móviles">Mobile Apps</a></li>
                         <li><a href="#services" data-en="UX/UI Design" data-es="Diseño UX/UI">UX/UI Design</a></li>
-                        <li><a href="#services" data-en="SEO Services" data-es="Servicios SEO">SEO Services</a></li>
+                        <li><a href="services/seo-miami.html" data-en="SEO Services" data-es="Servicios SEO">SEO Services</a></li>
                         <li><a href="#services" data-en="E-commerce" data-es="E-commerce">E-commerce</a></li>
                     </ul>
                 </div>
@@ -586,6 +586,18 @@
                 <p data-en="WE ARE ONE OF THE #1 WEB AGENCIES ON GOOGLE WITH GLOBAL SERVICE AND CUSTOMER SATISFACTION" data-es="SOMOS UNA DE LAS AGENCIAS WEB #1 EN GOOGLE CON SERVICIO GLOBAL Y SATISFACCIÓN AL CLIENTE">
                     WE ARE ONE OF THE #1 WEB AGENCIES ON GOOGLE WITH GLOBAL SERVICE AND CUSTOMER SATISFACTION
                 </p>
+                <div class="additional-links">
+                    <h4>Additional Links</h4>
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#whatsapp-btn">Get Quote</a></li>
+                        <li><a href="services/web-design-miami.html">Web Design Miami</a></li>
+                        <li><a href="services/seo-miami.html">SEO Miami</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
