feat(seo): add Ecommerce & Mobile Apps landings + internal links and sitemap updates

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             <li data-en="Native Windows Apps" data-es="Apps Nativas Windows">Native Windows Apps</li>
                             <li data-en="System Integration" data-es="Integración de Sistema">System Integration</li>
                         </ul>
-                        <a href="#contact" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                        <a href="services/mobile-apps-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
                     </div>
                 </div>
 
@@ -264,7 +264,7 @@
                             <li data-en="Professional Interface Design" data-es="Design de Interfaz Profesional">Professional Interface Design</li>
                             <li data-en="Miami Business Design Systems" data-es="Sistemas de Design Negocios Miami">Miami Business Design Systems</li>
                         </ul>
-                        <a href="#contact" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
+                        <a href="services/ecommerce-miami.html" class="service-btn" data-en="Learn More" data-es="Saber Más">Learn More</a>
                     </div>
                 </div>
 
@@ -596,6 +596,8 @@
                         <li><a href="#whatsapp-btn">Get Quote</a></li>
                         <li><a href="services/web-design-miami.html">Web Design Miami</a></li>
                         <li><a href="services/seo-miami.html">SEO Miami</a></li>
+                        <li><a href="services/mobile-apps-miami.html">Mobile App Development Miami</a></li>
+                        <li><a href="services/ecommerce-miami.html">E‑commerce Miami</a></li>
                     </ul>
                 </div>
             </div>
