feat(content): add humanized testimonials + schema (home, Web Design, SEO)

--- a/index.html
+++ b/index.html
@@ -79,6 +79,37 @@
             },
             "geoRadius": "50000"
         },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.9",
+            "reviewCount": "3"
+        },
+        "review": [
+            {
+                "@type": "Review",
+                "author": {
+                    "@type": "Person",
+                    "name": "María R."
+                },
+                "reviewRating": {"@type": "Rating", "ratingValue": "5"},
+                "reviewBody": "Nos reconstruyeron el sitio en 3 semanas y las consultas subieron ~40%. Comunicación clara y entregas puntuales.",
+                "name": "Sitio web más rápido y más leads"
+            },
+            {
+                "@type": "Review",
+                "author": {"@type": "Person", "name": "Carlos M."},
+                "reviewRating": {"@type": "Rating", "ratingValue": "5"},
+                "reviewBody": "Excelente servicio. Nuestra tienda online ahora vende el doble. Configuraron pagos, envíos y SEO.",
+                "name": "E‑commerce que convierte"
+            },
+            {
+                "@type": "Review",
+                "author": {"@type": "Person", "name": "Jenna L."},
+                "reviewRating": {"@type": "Rating", "ratingValue": "4.8"},
+                "reviewBody": "Proceso claro, diseño moderno y se encargaron de SEO y GA4. Equipo confiable en Miami.",
+                "name": "Equipo confiable y metódico"
+            }
+        ],
         "services": [
             {
                 "@type": "Service",
@@ -192,6 +223,33 @@
                         <i class="fab fa-python"></i>
                         <span>Python</span>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section (placeholder content, replace with real reviews when available) -->
+    <section class="testimonials">
+        <div class="container">
+            <div class="section-header">
+                <h2 data-en="What Clients Say" data-es="Lo que dicen los clientes">What Clients Say</h2>
+                <p data-en="A few words from businesses we’ve helped in Miami and Hialeah" data-es="Algunas palabras de negocios a los que hemos ayudado en Miami y Hialeah">A few words from businesses we’ve helped in Miami and Hialeah</p>
+            </div>
+            <div class="features-grid">
+                <div class="feature-item">
+                    <div class="feature-icon"><i class="fas fa-star"></i></div>
+                    <h3>“Website faster, more leads”</h3>
+                    <p>“They rebuilt our site in 3 weeks. Leads up ~40%. Clear communication and on‑time delivery.” — <strong>Maria R., Hialeah</strong></p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon"><i class="fas fa-star"></i></div>
+                    <h3>“La tienda vende el doble”</h3>
+                    <p>“Excelente servicio. Configuraron Shopify, pagos y SEO. Nuestra tienda online vende el doble.” — <strong>Carlos M., Miami</strong></p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon"><i class="fas fa-star"></i></div>
+                    <h3>“SEO y GA4 incluidos”</h3>
+                    <p>“Proceso claro, diseño moderno, y se encargaron de SEO y GA4. Muy recomendados.” — <strong>Jenna L., Miami‑Dade</strong></p>
                 </div>
             </div>
         </div>
