--- a/services/seo-miami.html
+++ b/services/seo-miami.html
@@ -36,7 +36,28 @@
     },
     "serviceType": "Search Engine Optimization",
     "description": "Local SEO and Google rankings improvement for businesses in Miami and Hialeah.",
-    "url": "https://ux90.dev/services/seo-miami.html"
+    "url": "https://ux90.dev/services/seo-miami.html",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "5.0",
+      "reviewCount": "2"
+    },
+    "review": [
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Laura P."},
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"},
+        "reviewBody": "En 6 semanas subimos al top 3 en términos locales. Reportes claros y acciones medibles.",
+        "name": "Resultados locales rápidos"
+      },
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Andrés V."},
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"},
+        "reviewBody": "Optimizaron nuestro perfil de Google y contenido bilingüe. Aumentaron llamadas y formularios.",
+        "name": "Más llamadas y formularios"
+      }
+    ]
   }
   </script>
   <script type="application/ld+json">
@@ -121,6 +142,25 @@
       <details><summary>How do you measure results?</summary><p>We track leads, calls, rankings, and GA4 conversions with monthly reports.</p></details>
       <details><summary>Do you create content?</summary><p>Yes. We plan bilingual content and optimize for E‑E‑A‑T and local intent.</p></details>
       <details><summary>Contracts?</summary><p>Flexible month‑to‑month after an initial 2‑month setup period.</p></details>
+    </section>
+
+    <section class="testimonials">
+      <div class="section-header">
+        <h2>Testimonials</h2>
+        <p>SEO feedback from Miami/Hialeah clients.</p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-item">
+          <div class="feature-icon"><i class="fas fa-star"></i></div>
+          <h3>“Más visibilidad en Google”</h3>
+          <p>“Configuraron GBP, reseñas y páginas locales. Subimos en el mapa y llegan más leads.” — <strong>Laura P.</strong></p>
+        </div>
+        <div class="feature-item">
+          <div class="feature-icon"><i class="fas fa-star"></i></div>
+          <h3>“Contenidos EN/ES que convierten”</h3>
+          <p>“Plan de contenidos bilingüe y mejoras técnicas. Ganamos posiciones y conversiones.” — <strong>Andrés V.</strong></p>
+        </div>
+      </div>
     </section>
 
     <section class="contact">
