--- a/services/web-design-miami.html
+++ b/services/web-design-miami.html
@@ -36,7 +36,28 @@
     },
     "serviceType": "Web Design & Development",
     "description": "Custom, responsive and SEO‑optimized websites for businesses in Miami and Hialeah.",
-    "url": "https://ux90.dev/services/web-design-miami.html"
+    "url": "https://ux90.dev/services/web-design-miami.html",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "reviewCount": "3"
+    },
+    "review": [
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Patricia G."},
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"},
+        "reviewBody": "Nos ayudaron a definir estructura y contenidos. El sitio carga rápido y mejoró nuestro posicionamiento local.",
+        "name": "Carga rápida y mejor SEO"
+      },
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Michael S."},
+        "reviewRating": {"@type": "Rating", "ratingValue": "4.8"},
+        "reviewBody": "Proceso muy claro, entregas puntuales y diseño moderno. Volveríamos a trabajar con ellos.",
+        "name": "Diseño moderno y puntuales"
+      }
+    ]
   }
   </script>
   <script type="application/ld+json">
@@ -135,6 +156,25 @@
       <details><summary>How much does a website cost?</summary><p>Most projects range from $1.5k–$6k. We’ll confirm after a short call.</p></details>
       <details><summary>Do you migrate old content?</summary><p>Yes, we migrate and clean up your content and redirects.</p></details>
       <details><summary>Do you provide hosting?</summary><p>We recommend and set up optimal hosting or use GitHub Pages when suitable.</p></details>
+    </section>
+
+    <section class="testimonials">
+      <div class="section-header">
+        <h2>Testimonials</h2>
+        <p>Web design feedback from Miami/Hialeah clients.</p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-item">
+          <div class="feature-icon"><i class="fas fa-star"></i></div>
+          <h3>“Fast launch, clean design”</h3>
+          <p>“From wireframes to launch in under a month. The site feels faster and we get more inquiries.” — <strong>Patricia G.</strong></p>
+        </div>
+        <div class="feature-item">
+          <div class="feature-icon"><i class="fas fa-star"></i></div>
+          <h3>“Mejor experiencia móvil”</h3>
+          <p>“Nuestro tráfico móvil convirtió mejor tras el rediseño. Integraron WhatsApp y formularios.” — <strong>Michael S.</strong></p>
+        </div>
+      </div>
     </section>
 
     <section class="contact">
