feat(content): add humanized testimonials + schema (Ecommerce, Mobile Apps)

--- a/services/ecommerce-miami.html
+++ b/services/ecommerce-miami.html
@@ -36,7 +36,24 @@
     },
     "serviceType": "E‑commerce Website Development",
     "description": "Shopify & WooCommerce development, payment integration, inventory, and SEO for Miami businesses.",
-    "url": "https://ux90.dev/services/ecommerce-miami.html"
+    "url": "https://ux90.dev/services/ecommerce-miami.html",
+    "aggregateRating": {"@type": "AggregateRating", "ratingValue": "5.0", "reviewCount": "2"},
+    "review": [
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Rafael T."},
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"},
+        "reviewBody": "Implementaron Shopify con pagos y envíos. El checkout quedó simple y las ventas subieron.",
+        "name": "Checkout simple, más ventas"
+      },
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Emily K."},
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"},
+        "reviewBody": "Migraron nuestro catálogo a WooCommerce sin perder SEO. Excelente comunicación.",
+        "name": "Migración sin perder SEO"
+      }
+    ]
   }
   </script>
   <script type="application/ld+json">
@@ -135,6 +152,25 @@
       <details><summary>Do you migrate from another platform?</summary><p>Yes. We migrate products, customers, and orders when feasible.</p></details>
       <details><summary>Do you support multi‑language?</summary><p>Yes. We implement bilingual setups (EN/ES) with proper SEO.</p></details>
       <details><summary>Can you manage the store?</summary><p>We offer ongoing support, optimization, and growth services.</p></details>
+    </section>
+
+    <section class="testimonials">
+      <div class="section-header">
+        <h2>Testimonials</h2>
+        <p>Results from Miami e‑commerce projects.</p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-item">
+          <div class="feature-icon"><i class="fas fa-star"></i></div>
+          <h3>“Ventas al alza”</h3>
+          <p>“Optimizaron el checkout y configuraron pagos. Vimos mejora inmediata en conversiones.” — <strong>Rafael T.</strong></p>
+        </div>
+        <div class="feature-item">
+          <div class="feature-icon"><i class="fas fa-star"></i></div>
+          <h3>“Migración cuidada”</h3>
+          <p>“Pasamos a WooCommerce con redirecciones correctas y sin perder posiciones.” — <strong>Emily K.</strong></p>
+        </div>
+      </div>
     </section>
 
     <section class="contact">
