--- a/services/mobile-apps-miami.html
+++ b/services/mobile-apps-miami.html
@@ -36,7 +36,24 @@
     },
     "serviceType": "Mobile Application Development",
     "description": "Native iOS/Android and cross‑platform apps with design and integrations for Miami businesses.",
-    "url": "https://ux90.dev/services/mobile-apps-miami.html"
+    "url": "https://ux90.dev/services/mobile-apps-miami.html",
+    "aggregateRating": {"@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "2"},
+    "review": [
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Sofía H."},
+        "reviewRating": {"@type": "Rating", "ratingValue": "5"},
+        "reviewBody": "Publicamos en App Store y Play sin contratiempos. Buen diseño y push notifications funcionando.",
+        "name": "Lanzamiento sin contratiempos"
+      },
+      {
+        "@type": "Review",
+        "author": {"@type": "Person", "name": "Jason F."},
+        "reviewRating": {"@type": "Rating", "ratingValue": "4.8"},
+        "reviewBody": "Integraron pagos y analytics. El roadmap fue claro y cumplieron la fecha de salida.",
+        "name": "Integraciones y fecha cumplida"
+      }
+    ]
   }
   </script>
   <script type="application/ld+json">
@@ -121,6 +138,25 @@
       <details><summary>How long does it take?</summary><p>Most MVPs ship in 4–10 weeks depending on scope and integrations.</p></details>
       <details><summary>Do you provide maintenance?</summary><p>Yes. We offer ongoing updates, monitoring, and growth improvements.</p></details>
       <details><summary>Can you publish to TestFlight/Play testing?</summary><p>Yes. We set up beta testing and release workflows.</p></details>
+    </section>
+
+    <section class="testimonials">
+      <div class="section-header">
+        <h2>Testimonials</h2>
+        <p>Mobile app results for Miami/Hialeah.</p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-item">
+          <div class="feature-icon"><i class="fas fa-star"></i></div>
+          <h3>“ASO y lanzamiento”</h3>
+          <p>“Nos guiaron con capturas, metadata y el envío. La app quedó estable y rápida.” — <strong>Sofía H.</strong></p>
+        </div>
+        <div class="feature-item">
+          <div class="feature-icon"><i class="fas fa-star"></i></div>
+          <h3>“Integraciones clave”</h3>
+          <p>“Pagos, auth y analytics listos. Comunicación fluida todo el sprint.” — <strong>Jason F.</strong></p>
+        </div>
+      </div>
     </section>
 
     <section class="contact">
