feat(ui): add Clients section with placeholder logos (accessible, lazy-loaded)

--- a/index.html
+++ b/index.html
@@ -228,6 +228,36 @@
         </div>
     </section>
 
+    <!-- Clients Section (placeholder logos; replace with real client logos when available) -->
+    <section class="clients">
+        <div class="container">
+            <div class="section-header">
+                <h2 data-en="Trusted by clients" data-es="Confiado por clientes">Trusted by clients</h2>
+                <p data-en="A selection of brands we’ve worked with or supported" data-es="Una selección de marcas con las que hemos trabajado o apoyado">A selection of brands we’ve worked with or supported</p>
+            </div>
+            <div class="features-grid">
+                <div class="feature-item" aria-label="Client 1">
+                    <img src="images/clients/client-1.svg" alt="Client 1 logo" loading="lazy" />
+                </div>
+                <div class="feature-item" aria-label="Client 2">
+                    <img src="images/clients/client-2.svg" alt="Client 2 logo" loading="lazy" />
+                </div>
+                <div class="feature-item" aria-label="Client 3">
+                    <img src="images/clients/client-3.svg" alt="Client 3 logo" loading="lazy" />
+                </div>
+                <div class="feature-item" aria-label="Client 4">
+                    <img src="images/clients/client-4.svg" alt="Client 4 logo" loading="lazy" />
+                </div>
+                <div class="feature-item" aria-label="Client 5">
+                    <img src="images/clients/client-5.svg" alt="Client 5 logo" loading="lazy" />
+                </div>
+                <div class="feature-item" aria-label="Client 6">
+                    <img src="images/clients/client-6.svg" alt="Client 6 logo" loading="lazy" />
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Testimonials Section (placeholder content, replace with real reviews when available) -->
     <section class="testimonials">
         <div class="container">
