--- a/services/mobile-apps-miami.html
+++ b/services/mobile-apps-miami.html
@@ -140,6 +140,20 @@
       <details><summary>Can you publish to TestFlight/Play testing?</summary><p>Yes. We set up beta testing and release workflows.</p></details>
     </section>
 
+    <section class="clients">
+      <div class="section-header">
+        <h2>Clients</h2>
+        <p>Apps we’ve helped bring to market.</p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-item" aria-label="Client 1"><img src="../images/clients/client-1.svg" alt="Client 1 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 2"><img src="../images/clients/client-2.svg" alt="Client 2 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 3"><img src="../images/clients/client-3.svg" alt="Client 3 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 4"><img src="../images/clients/client-4.svg" alt="Client 4 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 5"><img src="../images/clients/client-5.svg" alt="Client 5 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 6"><img src="../images/clients/client-6.svg" alt="Client 6 logo" loading="lazy" /></div>
+      </div>
+    </section>
     <section class="testimonials">
       <div class="section-header">
         <h2>Testimonials</h2>
