--- a/services/seo-miami.html
+++ b/services/seo-miami.html
@@ -144,6 +144,20 @@
       <details><summary>Contracts?</summary><p>Flexible month‑to‑month after an initial 2‑month setup period.</p></details>
     </section>
 
+    <section class="clients">
+      <div class="section-header">
+        <h2>Clients</h2>
+        <p>Brands we’ve helped grow with SEO.</p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-item" aria-label="Client 1"><img src="../images/clients/client-1.svg" alt="Client 1 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 2"><img src="../images/clients/client-2.svg" alt="Client 2 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 3"><img src="../images/clients/client-3.svg" alt="Client 3 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 4"><img src="../images/clients/client-4.svg" alt="Client 4 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 5"><img src="../images/clients/client-5.svg" alt="Client 5 logo" loading="lazy" /></div>
+        <div class="feature-item" aria-label="Client 6"><img src="../images/clients/client-6.svg" alt="Client 6 logo" loading="lazy" /></div>
+      </div>
+    </section>
     <section class="testimonials">
       <div class="section-header">
         <h2>Testimonials</h2>
