feat(seo): add bilingual FAQ section + FAQPage JSON-LD and footer link

--- a/index.html
+++ b/index.html
@@ -137,6 +137,34 @@
         ]
     }
     </script>
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "FAQPage",
+            "mainEntity": [
+                {
+                    "@type": "Question",
+                    "name": "How long does a website take?",
+                    "acceptedAnswer": {"@type": "Answer", "text": "Most sites take 2–6 weeks depending on content and features."}
+                },
+                {
+                    "@type": "Question",
+                    "name": "Do you work in English and Spanish?",
+                    "acceptedAnswer": {"@type": "Answer", "text": "Yes, we build bilingual sites and optimize for local SEO in EN/ES."}
+                },
+                {
+                    "@type": "Question",
+                    "name": "Can you help with SEO and analytics?",
+                    "acceptedAnswer": {"@type": "Answer", "text": "We set up on‑page SEO, structured data, and GA4 conversions by default."}
+                },
+                {
+                    "@type": "Question",
+                    "name": "¿Trabajan con tiendas online?",
+                    "acceptedAnswer": {"@type": "Answer", "text": "Sí, implementamos Shopify y WooCommerce con pagos, envíos y SEO."}
+                }
+            ]
+        }
+        </script>
 </head>
 <body data-lang="en">
 
@@ -224,6 +252,34 @@
                         <span>Python</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Global FAQ Section -->
+    <section id="faq-home" class="about-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 data-en="Frequently Asked Questions" data-es="Preguntas Frecuentes">Frequently Asked Questions</h2>
+                <p data-en="Answers to common questions about timelines, SEO, and support." data-es="Respuestas a preguntas comunes sobre tiempos, SEO y soporte.">Answers to common questions about timelines, SEO, and support.</p>
+            </div>
+            <div class="faq-list">
+                <details>
+                    <summary data-en="How long does a website take?" data-es="¿Cuánto tarda un sitio web?">How long does a website take?</summary>
+                    <p data-en="Most sites take 2–6 weeks depending on content and features." data-es="La mayoría toma entre 2 y 6 semanas según contenido y funcionalidades.">Most sites take 2–6 weeks depending on content and features.</p>
+                </details>
+                <details>
+                    <summary data-en="Do you work in English and Spanish?" data-es="¿Trabajan en inglés y español?">Do you work in English and Spanish?</summary>
+                    <p data-en="Yes, we build bilingual sites and optimize for local SEO in EN/ES." data-es="Sí, construimos sitios bilingües y optimizamos para SEO local en EN/ES.">Yes, we build bilingual sites and optimize for local SEO in EN/ES.</p>
+                </details>
+                <details>
+                    <summary data-en="Can you help with SEO and analytics?" data-es="¿Pueden ayudar con SEO y analíticas?">Can you help with SEO and analytics?</summary>
+                    <p data-en="We set up on‑page SEO, structured data, and GA4 conversions by default." data-es="Configuramos SEO on‑page, datos estructurados y conversiones GA4 por defecto.">We set up on‑page SEO, structured data, and GA4 conversions by default.</p>
+                </details>
+                <details>
+                    <summary data-en="Do you build online stores?" data-es="¿Construyen tiendas online?">Do you build online stores?</summary>
+                    <p data-en="Yes, Shopify and WooCommerce with payments, shipping, and SEO setup." data-es="Sí, Shopify y WooCommerce con pagos, envíos y SEO configurado.">Yes, Shopify and WooCommerce with payments, shipping, and SEO setup.</p>
+                </details>
             </div>
         </div>
     </section>
@@ -681,6 +737,7 @@
                         <li><a href="#services">Services</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="#faq-home">FAQ</a></li>
                         <li><a href="#whatsapp-btn">Get Quote</a></li>
                         <li><a href="services/web-design-miami.html">Web Design Miami</a></li>
                         <li><a href="services/seo-miami.html">SEO Miami</a></li>
